C/include/codata_constants_2010.h

ADD_IMPORT extern const struct codata_constant_type DEUTERON_ELECTRON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_ELECTRON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_G_FACTOR_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MAG_MOM_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MAG_MOM_TO_NUCLEAR_MAGNETON_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_ENERGY_EQUIVALENT_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_ENERGY_EQUIVALENT_IN_MEV_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MASS_IN_U_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_MOLAR_MASS_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_NEUTRON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_PROTON_MAG_MOM_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_PROTON_MASS_RATIO_2010;
ADD_IMPORT extern const struct codata_constant_type DEUTERON_RMS_CHARGE_RADIUS_2010;